@@ -1,4 +1,6 @@
 2 October 2008
++ RFE #2060159: Pin page link appears in miniadmin if admin mode is
+  set to appear there.
 + Fixed bug #2079194. Deleting menu now removes links as well. Thanks
   Tommy.
 
